<resources>
    <string name="app_name">MyGoalz</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="NewHabitBanner">Create New habit</string>
    <string name="habit_label">Habit</string>
    <string name="habit_input">Give your habit a name</string>
    <string name="repeat_days_label">Repeat Days</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="minute">minute</string>
    <string name="hourHint">H</string>
    <string name="saturdayBtn">S</string>
    <string name="fridayBtn">F</string>
    <string name="thursdayBtn">T</string>
    <string name="wednesdayBtn">W</string>
    <string name="tuesdayBtn">T</string>
    <string name="mondayBtn">M</string>
    <string name="sundayBtn">S</string>
    <string name="habit_createBtn">Create</string>
    <string name="back_button">Back button</string>
    <string name="my_username">My username</string>
    <string name="bio">Bio</string>
    <string name="lipsum">Lorem ipsum dolor sit amet,
consectetur adipiscing elit. Nunc
vulputate libero et velit interdum, ac
aliquet odio mattis.</string>
    <string name="goals">Goals</string>
    <string name="achievements">Achievements</string>
    <string name="achievement_name">Achievement Name</string>
    <string name="goal_image">Goal image</string>
    <string name="achievement_image">Achievement image</string>
    <string name="achievement_description">Description</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="account_privacy">Account Privacy</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="privacy_instructions">If you set your account as public,
        other users will be able to view your profile and see your goals and achievements.
        If you do not wish for this to happen, set this to private.</string>
</resources>
