<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".fragments.HabitCreationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:text="@string/NewHabitBanner"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="28sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/habit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:lineSpacingExtra="8sp"
                    android:padding="20dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="8dp"
                    android:text="@string/habit_label"
                    android:textColor="@color/purple_500"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/input_habit"
                    android:layout_width="320dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="15dp"
                    android:hint="@string/habit_input"
                    android:inputType="textShortMessage"
                    android:minWidth="320dp"
                    android:minHeight="40dp"
                    android:padding="20dp"
                    android:paddingBottom="66dp"
                    android:textColorHint="#3177DF" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="20dp"
                    android:paddingTop="66dp"
                    android:text="@string/repeat_days_label"
                    android:textColor="@color/purple_500"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="15dp">

                    <Button
                        android:id="@+id/Sunday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:width="40dp"
                        android:height="40dp"
                        android:backgroundTint="#D9D9D9"
                        android:insetRight="6dp"
                        android:text="@string/sundayBtn"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        app:cornerRadius="8dp" />

                    <Button
                        android:id="@+id/monday"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:width="40dp"
                        android:height="40dp"
                        android:backgroundTint="#D9D9D9"
                        android:insetRight="6dp"
                        android:text="@string/mondayBtn"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        app:cornerRadius="8dp" />

                    <Button
                        android:id="@+id/tuesday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:width="40dp"
                        android:height="40dp"
                        android:backgroundTint="#D9D9D9"
                        android:insetRight="6dp"
                        android:text="@string/tuesdayBtn"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        app:cornerRadius="8dp" />

                    <Button
                        android:id="@+id/wednesday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:width="40dp"
                        android:height="40dp"
                        android:backgroundTint="#D9D9D9"
                        android:insetRight="6dp"
                        android:text="@string/wednesdayBtn"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        app:cornerRadius="8dp" />

                    <Button
                        android:id="@+id/thursday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:width="40dp"
                        android:height="40dp"
                        android:backgroundTint="#D9D9D9"
                        android:insetRight="6dp"
                        android:text="@string/thursdayBtn"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        app:cornerRadius="8dp" />

                    <Button
                        android:id="@+id/friday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:width="40dp"
                        android:height="40dp"
                        android:backgroundTint="#D9D9D9"
                        android:insetRight="6dp"
                        android:text="@string/fridayBtn"
                        android:textColor="#000000"
                        android:textStyle="bold"
                        app:cornerRadius="8dp" />

                    <Button
                        android:id="@+id/saturday"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:width="40dp"
                        android:height="40dp"
                        android:text="@string/saturdayBtn"
                        app:cornerRadius="8dp"
                        android:backgroundTint="#D9D9D9"
                        android:textColor="#000000"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/set_reminder"
                        android:textColor="@color/purple_500"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/hour"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hourHint"
                                android:inputType="number|time"
                                android:textAlignment="center" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/minute"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:hint="@string/minute"
                                android:textColorHint="#757575" />

                        </com.google.android.material.textfield.TextInputLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/habit_createBtn"
                android:layout_width="315dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="54dp"
                android:layout_marginTop="108dp"
                android:layout_marginEnd="54dp"
                android:backgroundTint="@color/purple_500"
                android:text="@string/habit_createBtn"
                android:textAlignment="center"
                android:textStyle="bold"
                app:cornerRadius="8dp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>